# exonum_tx

./: .gitignore  Cargo.toml
src/: lib.rs  pending_transfer.rs  schema.rs  transactions.rs  wallet.rs
src/proto/: cryptocurrency.proto  mod.rs
tests/: tx.rs
